fixed media queries for other projects to look better on iphone

--- a/src/Pages/OtherProjects/OtherProjects.css
+++ b/src/Pages/OtherProjects/OtherProjects.css
@@ -60,6 +60,9 @@
     .BBCEpsContainer {
         padding: 0 2rem;
     }
+    .otherProjectsDescription {
+        font-size: 16px;
+    }
 }
 
 @media only screen and (max-width: 360px) {
