--- a/src/index.css
+++ b/src/index.css
@@ -84,8 +84,8 @@ code {
 
 @media only screen and (max-width: 414px) {
     .embedVideo {
-        width: 318px;
-        height: 225px;
+        width: 349px;
+        height: 247px;
         margin: 10px;
     }
 }
